...
) {
    Scaffold(
        modifier = Modifier.imePadding(),
        topBar = { MyTopAppBar() },
        floatingActionButton = {
            FloatingActionButton(
                modifier = Modifier.testTag("AddNoteFab"),
                onClick = onFabClicked,
            ) {
                Icon(
                    Icons.Filled.Done,
                    contentDescription = null,
                )
...
