...
    <string name="obrigatoriedade_de_campo">Campo título e anotação obrigatórios</string>
    <string name="nota_update">Nota atualizada</string>
    <string name="nota_insert">Nota criada</string>
    <string name="nota_delete">Nota removida</string>

    <!-- String formatada -->
    <string name="text_dtCriacao_format">"Criado: %s"</string>
    <string name="text_dtAtualizado_format">"Atualizado: %s"</string>
    <string name="est_total">"%d"</string>
    <string name="est_criadas">"%d"</string>
    <string name="est_finalizadas">"%d"</string>

    <!-- ContentDescription -->
    <string name="salvar_nota">Salvar nota</string>
...
