...
                    contentDescription = null,
                )
            }
        },
        floatingActionButton = {
            FloatingActionButton(
                modifier = Modifier.testTag("DetailNoteFab"),
                onClick = {
                    when (detailMode) {
                        DetailMode.VIEW -> {
                            onDetailModeChange(DetailMode.EDIT)
                            fabIcon = Icons.Filled.Done
                        }
...
